--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta property="og:title" content="Esp32 coop door: Automatic chicken coop door">
 		<meta property="og:image" content="https://esp32-coop-web.vercel.app/preview.png">
-		<meta property="og:description" content="Automatic chicken coop door powered by an ESP32, cheap, accessible, open-source and controlled with a phone app.
-		DIY your chicken coop with customizable behavior based on time and light levels. Control it through a dedicated Bluetooth-enabled app.">
+		<meta property="og:description" content="Automatic chicken coop door powered by an ESP32, open-source,  cheap, accessible and controlled with a phone app, customizable based on time and light levels.">
 		<meta property="og:url" content="https://esp32-coop-web.vercel.app/">
 		<meta name="twitter:card" content="https://esp32-coop-web.vercel.app/preview.png">
 		<title>ESP32 COOP</title>
