seo(meta) update

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/logo.svg" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="title" content="Esp32 coop door: Automatic chicken coop door" />
+		<meta name="description" content="Automatic chicken coop door powered by an ESP32, open-source,  cheap, accessible and controlled with a phone app, customizable based on time and light levels." />
 		<meta property="og:title" content="Esp32 coop door: Automatic chicken coop door">
 		<meta property="og:image" content="https://esp32-coop-web.vercel.app/preview.png">
 		<meta property="og:description" content="Automatic chicken coop door powered by an ESP32, open-source,  cheap, accessible and controlled with a phone app, customizable based on time and light levels.">
